Fixed the '$ is not defined' issue and fixed some broken css

--- a/packages/system/public/assets/css/styles.css
+++ b/packages/system/public/assets/css/styles.css
@@ -22,7 +22,6 @@ body {
 	font-size: 30px;
 	text-align: center;
 	text-decoration: none;
-	text-transform: 
 }
 section div div img {
 	width: auto;
